# PaddleOCR-ONNX

./: .gitignore  CMakeLists.txt  README.md  onnx_mobilenetv3.cpp  torch2onnx.py
examples/: onnx_mobilenetv3.cpp
libocr/: ocr.cpp  ocr.h
pytorch/: utils.py
